@@ -2,7 +2,7 @@ plugins {
     java
     id("org.springframework.boot") version "4.0.5"
     id("io.spring.dependency-management") version "1.1.7"
-    id ("org.openjfx.javafxplugin") version "0.1.0"
+    id("org.openjfx.javafxplugin") version "0.1.0"
 }
 
 group = "be.mnt"
@@ -31,12 +31,14 @@ dependencies {
     testRuntimeOnly("org.junit.platform:junit-platform-launcher")
 }
 
-tasks.withType<Test> {
-    useJUnitPlatform()
-}
-
 tasks.compileJava {
     options.encoding = "UTF-8"
-    //options.compilerArgs.add("--enable-native-access=ALL-UNNAMED")
-    //options.compilerArgs.add("--add-modules javafx.controls, javafx.fxml")
+}
+
+tasks.bootRun {
+    jvmArgs("--enable-native-access=ALL-UNNAMED")
+}
+
+tasks.withType<Test> {
+    useJUnitPlatform()
 }
